--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
             </div>
             <div class="row" style="margin-left: 30px; margin-right: 30px;">
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-left" data-aos-duration="1000">
-                    <a href="#" class="unit-1 text-center">
-                        <img src="images/delhi.jpg" alt="Image" class="img-fluid " style="height: 200px">
+                    <a href="bus_details.html#delhi" class="unit-1 text-center">
+                        <img src="images/delhi.jpg" alt="Image" class="img-fluid " style="height: 200px; width: 300px;">
                         <div class="unit-1-text">
                             <h3 class="unit-1-heading">Delhi</h3>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-down" data-aos-duration="800">
-                    <a href="#" class="unit-1 text-center">
+                    <a href="bus_details.html#agra" class="unit-1 text-center">
                         <img src="images/agra.jpg" alt="Image" class="img-fluid" style="height: 200px">
                         <div class="unit-1-text">
                             <h3 class="unit-1-heading">Agra</h3>
@@ -124,7 +124,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-right" data-aos-duration="1000">
-                    <a href="#" class="unit-1 text-center">
+                    <a href="bus_details.html#mathura" class="unit-1 text-center">
                         <img src="images/mathura.jpg" alt="Image" class="img-fluid" style="height: 200px">
                         <div class="unit-1-text">
                             <h3 class="unit-1-heading">Mathura</h3>
@@ -133,24 +133,27 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-left" data-aos-duration="1000">
-                    <a href="#" class="unit-1 text-center">
-                        <img src="images/vrindawan.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                    <a href="bus_details.html#vrindavan" class="unit-1 text-center">
+                        <img src="images/vrindawan.jpg" alt="Image" class="img-fluid"
+                            style="height: 200px; width: 300px;">
                         <div class="unit-1-text">
                             <h3 class="unit-1-heading">Vrindavan</h3>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-up" data-aos-duration="800">
-                    <a href="#" class="unit-1 text-center">
-                        <img src="images/barsana.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                    <a href="bus_details.html#barsana" class="unit-1 text-center">
+                        <img src="images/barsana.jpg" alt="Image" class="img-fluid"
+                            style="height: 200px; width: 300px;">
                         <div class="unit-1-text">
                             <h3 class="unit-1-heading">Barsana</h3>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-right" data-aos-duration="1000">
-                    <a href="#" class="unit-1 text-center">
-                        <img src="images/chamuhun.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                    <a href="bus_details.html#chaumuhan" class="unit-1 text-center">
+                        <img src="images/chamuhun.jpg" alt="Image" class="img-fluid"
+                            style="height: 200px; width: 300px;">
                         <div class="unit-1-text">
                             <h3 class="unit-1-heading">Chaumuhan</h3>
                         </div>
@@ -177,8 +180,9 @@
                     <!-- <div class=" col-lg-1"></div> -->
                     <div class="col-md-6 col-lg-5 mb-6 mb-lg-0" data-aos="zoom-in-right"
                         style="margin-top: 20px;  margin-left: 20px; margin-right: 20px;">
-                        <a href="#" class="unit-1 text-center">
-                            <img src="images/img1.jpg" alt="Image" class="img-fluid px-4" style="height: 350px">
+                        <a href="https://github.com/riyagaur" class="unit-1 text-center">
+                            <img src="images/img1.jpg" alt="Image" class="img-fluid px-4"
+                                style="height: 350px; width: 350px;">
                             <div class="unit-1-text">
                                 <h3 class="unit-1-heading">Riya Gaur</h3>
                             </div>
@@ -186,8 +190,9 @@
                     </div>
                     <div class="col-md-6 col-lg-5 mb-6 mb-lg-0" data-aos="zoom-in-left"
                         style="margin-top: 20px; margin-left: 20px;  margin-right: 20px">
-                        <a href="#" class="unit-1 text-center">
-                            <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 350px">
+                        <a href="https://github.com/sameeksharathi" class="unit-1 text-center">
+                            <img src="images/img2.jpeg" alt="Image" class="img-fluid"
+                                style="height: 350px;  width: 300px;">
                             <div class="unit-1-text">
                                 <h3 class="unit-1-heading">Sameeksha Rathi</h3>
                             </div>
@@ -351,8 +356,11 @@
 
 
         <div class="footer-copyright text-center py-3">
-            <p>Copyright © 2020 All Rights Reserved by <a href="#">Bus
-                    Pass</a></p>
+            <p>Copyright © 2020 All Rights Reserved by
+                <a href="https://github.com/sameeksharathi/Full-Stack-Project">Bus
+                    Pass </a><a href="" class="top"><i class="fa fa-arrow-circle-up pl-1" style="color: black"></i>
+                </a>
+            </p>
         </div>
     </footer>
     <!-- Footer -->
