--- a/bus_details.html
+++ b/bus_details.html
@@ -85,7 +85,7 @@
 
 
 
-  <div id="delhi" class="site-section " style="margin-top: 30px; padding-top: 130px;  margin-left: 60px;">
+  <div id="delhi" class="site-section " style="margin-top: 30px; padding-top: 130px; ">
     <div class="container">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
@@ -123,9 +123,9 @@
     </div>
   </div>
 
-  <div id="agra" class="site-section" style="padding-top: 130px; margin-left: 60px;">
+  <div id="agra" class="site-section" style="padding-top: 130px;">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mb-5 mb-md-0 order-2 order-md-1 mt-5" data-aos="fade-left">
           <h2 class="font-weight-light text-black mb-4 " style="text-align: center">Agra</h2>
           <table style="border-top: solid; color:black; font-size: 1rem;">
@@ -161,9 +161,9 @@
     </div>
   </div>
 
-  <div id="mathura" class="site-section" style="padding-top: 130px; margin-left: 60px;">
+  <div id="mathura" class="site-section" style="padding-top: 130px;">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mt-5 mb-md-0" data-aos="fade-right">
           <img src="images/mathura.jpg" style="height: 250px; width: 400px;" alt="Image" class="img-fluid rounded">
         </div>
@@ -199,9 +199,9 @@
     </div>
   </div>
 
-  <div id="vrindavan" class="site-section" style="padding-top: 130px; margin-left: 60px;">
+  <div id="vrindavan" class="site-section" style="padding-top: 130px;">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mb-5 mb-md-0 order-2 order-md-1 mt-5" data-aos="fade-left">
           <h2 class="font-weight-light text-black mb-4" style="text-align: center">Vrindavan</h2>
           <table style="border-top: solid; color:black; font-size: 1rem;">
@@ -238,9 +238,9 @@
     </div>
   </div>
 
-  <div id="barsana" class="site-section" style="padding-top: 130px; margin-left: 60px;">
+  <div id="barsana" class="site-section" style="padding-top: 130px;">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
           <img src="images/barsana.jpg" style=" height: 250px; width: 400px;" alt="Image" class="img-fluid rounded">
         </div>
@@ -276,9 +276,9 @@
     </div>
   </div>
 
-  <div id="chaumuhan" class="site-section" style="margin-bottom: 30px; padding-top: 130px; margin-left: 60px;">
+  <div id="chaumuhan" class="site-section" style="margin-bottom: 30px; padding-top: 130px;">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mb-5 mb-md-0 order-2 order-md-1 mt-5" data-aos="fade-left">
           <h2 class="font-weight-light text-black mb-4" style="text-align: center">Chaumuhan</h2>
           <table style="border-top: solid; color:black; font-size: 1rem;">
@@ -419,8 +419,8 @@
 
 
     <div class="footer-copyright text-center py-3">
-      <p>Copyright © 2020 All Rights Reserved by <a href="#" style="text-decoration: none;">Bus Pass <i
-            class="fa fa-arrow-circle-up pl-1"></i></a>
+      <p>Copyright © 2020 All Rights Reserved by <a href="https://github.com/sameeksharathi/Full-Stack-Project">Bus
+          Pass </a><a href=""><i class="fa fa-arrow-circle-up pl-1" style="color: black"></i></a>
       </p>
     </div>
   </footer>
