--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,8 @@
 
 
       <div class="footer-copyright text-center py-3">
-        <p>Copyright © 2020 All Rights Reserved by <a href="#">Bus Pass</a></p>
+        <p>Copyright © 2020 All Rights Reserved by <a href="https://github.com/sameeksharathi/Full-Stack-Project">Bus
+            Pass </a><a href="#"><i class="fa fa-arrow-circle-up pl-1" style="color: black"></i></a></p>
       </div>
     </footer>
     <!-- Footer -->
