--- a/Payment.html
+++ b/Payment.html
@@ -19,7 +19,7 @@
             <div class="row justify-align-center align-items-center">
                 <div class="col">
                     <div class="header">
-                        <h2>PAYMENT</h2>
+                        <h2 style="text-shadow: 1px 1px 2px #ffffffe3;">PAYMENT</h2>
                     </div>
                     <form class="form" id="form">
                         <div class="form-control">
