--- a/about.html
+++ b/about.html
@@ -90,13 +90,21 @@
         <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white" style=" font-weight: 500; font-size: 80px;">ABOUT</h1>
+            <h1 class="text-white" style=" font-weight: 500; font-size: 80px;  text-shadow: 2px 2px 4px #000000;">ABOUT
+            </h1>
             <div style="font-size: 17px; font-weight: 500;">
-              <a href="index.html" style="color: rgb(236, 234, 234);">Home</a>
+              <a href="index.html"
+                style="color: rgb(236, 234, 234);  text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Home</a>
               <span class="mx-2 text-white">&bullet;</span>
-              <a href="Form.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
+
+
+              <a href="bus_details.html"
+                style="color: rgb(236, 234, 234);  text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Bus
+                Details</a>
               <span class="mx-2 text-white">&bullet;</span>
-              <a href="bus_details.html" style="color: rgb(236, 234, 234);">Bus Details</a>
+              <a href="Form.html"
+                style="color: rgb(236, 234, 234);  text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Manage
+                Pass</a>
             </div>
 
           </div>
@@ -113,7 +121,7 @@
         <div class="row align-items-center">
           <div class="col-md-6 mb-5 mb-md-0">
             <img src="images/test.jpg" alt="Image" class="img-fluid rounded"
-              style="filter: contrast(80%); height: 270px; width: 450px;">
+              style="filter: contrast(80%); height: 270px; width: 450px; box-shadow: 3px 3px 5px grey;">
           </div>
           <div class="col-md-6 pl-md-5">
             <h2 class="font-weight-light text-black mb-4">Bus Pass System</h2>
