--- a/bus_details.html
+++ b/bus_details.html
@@ -67,13 +67,18 @@
       <div class="row align-items-center justify-content-center text-center ">
 
         <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="text-white" style=" font-weight: 500; font-size: 80px;">BUS DETAILS</h1>
+          <h1 class="text-white" style=" font-weight: 500; font-size: 80px; text-shadow: 2px 2px 4px #000000;">BUS
+            DETAILS</h1>
           <div style="font-size: 17px; font-weight: 500;">
-            <a href="index.html" style="color: rgb(236, 234, 234);">Home</a>
+            <a href="index.html"
+              style="color: rgb(236, 234, 234); text-shadow:2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Home</a>
             <span class="mx-2 text-white">&bullet;</span>
-            <a href="about.html" style="color: rgb(236, 234, 234);">About</a>
+            <a href="about.html"
+              style="color: rgb(236, 234, 234); text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">About</a>
             <span class="mx-2 text-white">&bullet;</span>
-            <a href="Form.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
+            <a href="Form.html"
+              style="color: rgb(236, 234, 234); text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Manage
+              Pass</a>
 
           </div>
         </div>
@@ -89,7 +94,8 @@
     <div class="container">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
-          <img src="images/delhi.jpg" style="height: 250px; width: 400px;" alt="Image" class="img-fluid rounded">
+          <img src="images/delhi.jpg" style="height: 250px; width: 400px; box-shadow: 3px 3px 5px grey;" alt="Image"
+            class="img-fluid rounded">
         </div>
         <div class="col-md-6 pl-md-5" data-aos="fade-left">
           <h2 class="font-weight-light text-black mb-4" style="text-align: center">Delhi</h2>
@@ -154,7 +160,8 @@
           </table>
         </div>
         <div class="col-md-6 pl-md-5 order-1 order-md-2" data-aos="fade-right">
-          <img src="images/agra.jpg" style="height: 250px; width: 400px;" alt="Image" class="img-fluid rounded">
+          <img src="images/agra.jpg" style="height: 250px; width: 400px; box-shadow: 3px 3px 5px grey;" alt="Image"
+            class="img-fluid rounded">
 
         </div>
       </div>
@@ -165,7 +172,8 @@
     <div class="container">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mt-5 mb-md-0" data-aos="fade-right">
-          <img src="images/mathura.jpg" style="height: 250px; width: 400px;" alt="Image" class="img-fluid rounded">
+          <img src="images/mathura.jpg" style="height: 250px; width: 400px; box-shadow: 3px 3px 5px grey;" alt="Image"
+            class="img-fluid rounded">
         </div>
         <div class="col-md-6 pl-md-5 mt-5">
           <h2 class="font-weight-light text-black mb-4" style="text-align: center" data-aos="fade-left">Mathura</h2>
@@ -230,8 +238,8 @@
           </table>
         </div>
         <div class="col-md-6 pl-md-5 order-1 order-md-2">
-          <img src="images/vrindawan.jpg" data-aos="fade-right" style="height: 250px; width: 400px;" alt="Image"
-            class="img-fluid rounded">
+          <img src="images/vrindawan.jpg" data-aos="fade-right"
+            style="height: 250px; width: 400px;box-shadow: 3px 3px 5px grey;" alt="Image" class="img-fluid rounded">
 
         </div>
       </div>
@@ -242,7 +250,8 @@
     <div class="container">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
-          <img src="images/barsana.jpg" style=" height: 250px; width: 400px;" alt="Image" class="img-fluid rounded">
+          <img src="images/barsana.jpg" style=" height: 250px; width: 400px; box-shadow: 3px 3px 5px grey;" alt="Image"
+            class="img-fluid rounded">
         </div>
         <div class="col-md-6 pl-md-5">
           <h2 class="font-weight-light text-black mb-4" data-aos="fade-left" style="text-align: center">Barsana</h2>
@@ -307,8 +316,8 @@
           </table>
         </div>
         <div class="col-md-6 pl-md-5 order-1 order-md-2">
-          <img src="images/chamuhun.jpg" data-aos="fade-right" style=" height: 250px; width: 400px;" alt="Image"
-            class="img-fluid rounded">
+          <img src="images/chamuhun.jpg" data-aos="fade-right"
+            style=" height: 250px; width: 400px; box-shadow: 3px 3px 5px grey;" alt="Image" class="img-fluid rounded">
 
         </div>
       </div>
