--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         </div>
     </div> -->
 
-    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: #fff; ">
+    <nav id="custom-nav" class="navbar navbar-light navbar-expand-xl fixed-top"
+        style=" width: 100%; background-color: #fff; ">
         <a class="navbar-brand" href="#"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
                 style="max-width: 70px; padding-left: 10px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
@@ -79,7 +80,8 @@
             <div class="row align-items-center justify-content-center text-center main">
 
                 <div class="col-md-12">
-                    <h1 class="text-white font-weight-bold">Bus Pass System</h1>
+                    <h1 class="text-white font-weight-bold" style="text-shadow: 2px 2px 4px #000000;">Bus Pass System
+                    </h1>
                     <p class="mb-5">A bus ride is like being in another world.</p>
                     <p><a href="Form.html" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
                     </p>
