--- a/Form.html
+++ b/Form.html
@@ -17,16 +17,16 @@
         style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px;">
     </div> -->
 
-    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 764px; width: 98.9vw"
+    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 900px; width: 98.9vw"
         data-aos="fade" data-stellar-background-ratio="0.5">
         <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
                 style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
 
-        <div class="container" style="margin-top: 20px;">
+        <div class="container" style="height: 765px; margin-top: 50px;">
             <div class="row justify-align-center align-items-center">
                 <div class="col">
                     <div class="header">
-                        <h2>MANAGE PASS</h2>
+                        <h2 style="text-shadow: 1px 1px 2px #ffffffe3;">MANAGE PASS</h2>
                     </div>
                     <form class="form" id="form">
                         <div class="form-control">
@@ -62,9 +62,10 @@
                         </div>
 
                         <div class="form-control">
-                            <label for="expdate">Valid till (Month)</label>
+                            <label for="expdate">Validity</label>
                             <select id="expdate" name="expdate"
                                 style="display: block; width: 100%; padding: 10px; border-radius: 5px; outline: none; border: 2px solid #f0f0f0;">
+                                <option value="months" disabled selected>Select Months</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -78,7 +79,9 @@
                             <label for="destination">Destination</label>
                             <select id="destination" name="destination"
                                 style="display: block; width: 100%; padding: 10px; border-radius: 5px; outline: none; border: 2px solid #f0f0f0;">
-                                <option value="Choose Your Destination">Choose Your Destination</option>
+                                <option value="Choose Your Destination" disabled selected>Choose
+                                    Your Destination
+                                </option>
                                 <option value="Delhi">Delhi</option>
                                 <option value="Agra">Agra</option>
                                 <option value="Mathura">Mathura</option>
