--- a/Form.html
+++ b/Form.html
@@ -47,7 +47,7 @@
 
                         <div class="form-control">
                             <label for="password">Password</label>
-                            <input type="text" id="password" placeholder="Choose Password">
+                            <input type="password" id="password" placeholder="Choose Password">
                             <i class="fa fa-check-circle"></i>
                             <i class="fa fa-exclamation-circle"></i>
                             <small></small>
