--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                     <form class="form" id="form">
 
                         <div class="form-control">
-                            <label id="mail" for="email">Email</label>
+                            <label id="email" for="email">Email</label>
                             <input type="text" id="email" placeholder="Enter Your Email">
                             <i class="fa fa-check-circle"></i>
                             <i class="fa fa-exclamation-circle"></i>
@@ -34,7 +34,7 @@
 
                         <div class="form-control">
                             <label for="password">Password</label>
-                            <input type="text" id="password" placeholder="Choose Password">
+                            <input type="password" id="password" placeholder="Choose Password">
                             <i class="fa fa-check-circle"></i>
                             <i class="fa fa-exclamation-circle"></i>
                             <small></small>
