--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
     <nav class="navbar navbar-light navbar-expand-xl fixed-top"
       style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
       <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
-          style="max-width: 70px; padding-left: 10px;"></a>
+          style="max-width: 70px; padding-left: 7px;"></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -139,7 +139,7 @@
 
 
 
-    <div class="site-section bg-light ">
+    <div class="site-section bg-light con">
       <div class="container">
         <div class="row content">
           <div class="col-lg- mb-5" style="margin: 30px auto;">
