--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <nav id="custom-nav" class="navbar navbar-light navbar-expand-xl fixed-top"
         style=" width: 100%; background-color: #fff; ">
         <a class="navbar-brand" href="#"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
-                style="max-width: 70px; padding-left: 10px;"></a>
+                style="max-width: 70px; padding-left: 5px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -103,7 +103,7 @@
                     <h2 class="heading " data-aos="flip-left">Our
                         Destinations</h2>
 
-                    <hr data-aos="fade-right" data-aos-delay="500" style="height: 1.5px;">
+                    <hr class="under" data-aos="fade-right" data-aos-delay="500" style="height: 1.5px;">
                     <div class="subheading">Choose Your Next Destination <img class="ml-1 bus d-none d-lg-inline-block"
                             data-aos="fade-right" src="images/travel.png" style="max-width: 90px;"></div>
                 </div>
