--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Form.html">Manage Pass</a>
+                    <a class="nav-link" href="login.html">Manage Pass</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="bus_details.html">Bus Details</a>
