--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                             <small></small>
                         </div>
                         <div class="button">
-                            <button type="submit" id="submit"
+                            <button type="submit" id="submit" onclick="Proceed()"
                                 style="color: white; text-decoration: none; padding: auto; text-align: center;">Login</button>
                         </div>
                     </form>
@@ -48,6 +48,8 @@
             </div>
         </div>
     </div>
+
+    <script src="js/login.js"></script>
 
 </body>
 
