--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login </title>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap"
         rel="stylesheet">
 </head>
@@ -26,7 +27,7 @@
 
                         <div class="form-control">
                             <label id="email" for="email">Email</label>
-                            <input type="text" id="email" placeholder="Enter Your Email">
+                            <input type="text" id="email1" placeholder="Enter Your Email">
                             <i class="fa fa-check-circle"></i>
                             <i class="fa fa-exclamation-circle"></i>
                             <small></small>
