--- a/login.html
+++ b/login.html
@@ -11,39 +11,40 @@
 </head>
 
 <body>
-    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 760px; width: 98.9vw"
+    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 760px; width: 100%"
         data-aos="fade" data-stellar-background-ratio="0.5">
         <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
                 style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
+        <div class="content">
+            <div class="container">
+                <div class="row justify-align-center align-items-center">
+                    <div class="col">
+                        <div class="header">
+                            <h2 style="text-shadow: 1px 1px 2px #ffffffe3;">LOGIN</h2>
+                        </div>
+                        <form class="form" id="form">
 
-        <div class="container">
-            <div class="row justify-align-center align-items-center">
-                <div class="col">
-                    <div class="header">
-                        <h2 style="text-shadow: 1px 1px 2px #ffffffe3;">LOGIN</h2>
+                            <div class="form-control">
+                                <label id="email" for="email">Email</label>
+                                <input type="text" id="email" placeholder="Enter Your Email">
+                                <i class="fa fa-check-circle"></i>
+                                <i class="fa fa-exclamation-circle"></i>
+                                <small></small>
+                            </div>
+
+                            <div class="form-control">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" placeholder="Choose Password">
+                                <i class="fa fa-check-circle"></i>
+                                <i class="fa fa-exclamation-circle"></i>
+                                <small></small>
+                            </div>
+                            <div class="button">
+                                <button type="submit" id="submit"
+                                    style="color: white; text-decoration: none; padding: auto; text-align: center;">Login</button>
+                            </div>
+                        </form>
                     </div>
-                    <form class="form" id="form">
-
-                        <div class="form-control">
-                            <label id="email" for="email">Email</label>
-                            <input type="text" id="email" placeholder="Enter Your Email">
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            <small></small>
-                        </div>
-
-                        <div class="form-control">
-                            <label for="password">Password</label>
-                            <input type="password" id="password" placeholder="Choose Password">
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            <small></small>
-                        </div>
-                        <div class="button">
-                            <button type="submit" id="submit"
-                                style="color: white; text-decoration: none; padding: auto; text-align: center;">Login</button>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
